@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2019 The Android Open Source Project
+ * Copyright (C) 2022 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,17 +17,18 @@ package com.android.tools.idea.run.deployment;
 
 import static org.junit.Assert.assertEquals;
 
+import com.android.ddmlib.AvdData;
 import com.android.ddmlib.IDevice;
-import com.android.tools.idea.run.AndroidDevice;
-import com.android.tools.idea.run.deployment.Device.Type;
+import com.android.tools.idea.run.ConnectedAndroidDevice;
+import com.android.tools.idea.run.LaunchCompatibility;
+import com.android.tools.idea.run.LaunchCompatibilityChecker;
 import com.google.common.util.concurrent.Futures;
-import com.google.common.util.concurrent.MoreExecutors;
-import java.util.Collections;
+import java.nio.file.Path;
+import java.util.Collection;
 import java.util.List;
-import java.util.concurrent.Executor;
-import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import org.junit.Before;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -35,129 +36,232 @@ import org.mockito.Mockito;
 
 @RunWith(JUnit4.class)
 public final class ConnectedDevicesTaskTest {
-  private IDevice myDdmlibDevice;
-  private AndroidDebugBridge myAndroidDebugBridge;
+  private final @NotNull IDevice myDevice;
+  private final @NotNull AndroidDebugBridge myBridge;
 
-  private Executor myExecutor;
+  @Nullable
+  private AsyncSupplier<Collection<ConnectedDevice>> myTask;
 
-  @Before
-  public void mockAndroidDebugBridge() {
-    myDdmlibDevice = Mockito.mock(IDevice.class);
+  public ConnectedDevicesTaskTest() {
+    myDevice = Mockito.mock(IDevice.class);
+    Mockito.when(myDevice.isOnline()).thenReturn(true);
 
-    myAndroidDebugBridge = Mockito.mock(AndroidDebugBridge.class);
-    Mockito.when(myAndroidDebugBridge.getConnectedDevices()).thenReturn(Futures.immediateFuture(Collections.singletonList(myDdmlibDevice)));
-  }
-
-  @Before
-  public void initExecutor() {
-    myExecutor = MoreExecutors.directExecutor();
+    myBridge = Mockito.mock(AndroidDebugBridge.class);
+    Mockito.when(myBridge.getConnectedDevices()).thenReturn(Futures.immediateFuture(List.of(myDevice)));
   }
 
   @Test
-  public void get() throws Exception {
+  public void getNameDeviceIsNull() throws Exception {
     // Arrange
-    AsyncSupplier<List<ConnectedDevice>> task = new ConnectedDevicesTask(myAndroidDebugBridge, null, myExecutor, d -> null);
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(null));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
 
     // Act
-    Future<List<ConnectedDevice>> devices = task.get();
+    var future = myTask.get();
 
     // Assert
-    assertEquals(Collections.emptyList(), devices.get(1, TimeUnit.SECONDS));
+    assertEquals("emulator-5554", ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getName());
   }
 
   @Test
-  public void getVirtualDeviceNameIsNull() throws Exception {
+  public void getNameNameIsNull() throws Exception {
     // Arrange
-    Mockito.when(myDdmlibDevice.isOnline()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.isEmulator()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.getSerialNumber()).thenReturn("emulator-5554");
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData(null, null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
 
-    AndroidDevice androidDevice = Mockito.mock(AndroidDevice.class);
-    AsyncSupplier<List<ConnectedDevice>> task = new ConnectedDevicesTask(myAndroidDebugBridge, null, myExecutor, d -> androidDevice);
+    myTask = new ConnectedDevicesTask(myBridge, null);
 
     // Act
-    Future<List<ConnectedDevice>> connectedDevices = task.get();
+    var future = myTask.get();
 
     // Assert
-    Object connectedDevice = new ConnectedDevice.Builder()
-      .setName("emulator-5554")
-      .setType(Type.PHONE)
-      .setKey(new SerialNumber("emulator-5554"))
-      .setAndroidDevice(androidDevice)
-      .build();
-
-    assertEquals(Collections.singletonList(connectedDevice), connectedDevices.get(1, TimeUnit.SECONDS));
+    assertEquals("emulator-5554", ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getName());
   }
 
   @Test
-  public void newKeyDeviceIsntEmulator() throws Exception {
+  public void getNameNameEqualsBuild() throws Exception {
     // Arrange
-    Mockito.when(myDdmlibDevice.isOnline()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.getSerialNumber()).thenReturn("86UX00F4R");
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData("<build>", null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
 
-    AndroidDevice androidDevice = Mockito.mock(AndroidDevice.class);
-    AsyncSupplier<List<ConnectedDevice>> task = new ConnectedDevicesTask(myAndroidDebugBridge, null, myExecutor, d -> androidDevice);
+    myTask = new ConnectedDevicesTask(myBridge, null);
 
     // Act
-    Future<List<ConnectedDevice>> connectedDevices = task.get();
+    var future = myTask.get();
 
     // Assert
-    Object connectedDevice = new ConnectedDevice.Builder()
-      .setName("86UX00F4R")
-      .setType(Type.PHONE)
-      .setKey(new SerialNumber("86UX00F4R"))
-      .setAndroidDevice(androidDevice)
-      .build();
-
-    assertEquals(Collections.singletonList(connectedDevice), connectedDevices.get(1, TimeUnit.SECONDS));
+    assertEquals("emulator-5554", ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getName());
   }
 
   @Test
-  public void newKeyPathIsntNull() throws Exception {
+  public void getName() throws Exception {
     // Arrange
-    Mockito.when(myDdmlibDevice.isOnline()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.isEmulator()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.getAvdName()).thenReturn("Pixel_4_API_30");
-    Mockito.when(myDdmlibDevice.getAvdPath()).thenReturn("/home/juancnuno/.android/avd/Pixel_4_API_30.avd");
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData("Pixel_6_API_33", null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
 
-    AndroidDevice androidDevice = Mockito.mock(AndroidDevice.class);
-    AsyncSupplier<List<ConnectedDevice>> task = new ConnectedDevicesTask(myAndroidDebugBridge, null, myExecutor, d -> androidDevice);
+    myTask = new ConnectedDevicesTask(myBridge, null);
 
     // Act
-    Future<List<ConnectedDevice>> connectedDevices = task.get();
+    var future = myTask.get();
 
     // Assert
-    Object connectedDevice = new ConnectedDevice.Builder()
-      .setName("Pixel_4_API_30")
-      .setType(Type.PHONE)
-      .setKey(new VirtualDevicePath("/home/juancnuno/.android/avd/Pixel_4_API_30.avd"))
-      .setAndroidDevice(androidDevice)
-      .build();
-
-    assertEquals(Collections.singletonList(connectedDevice), connectedDevices.get(1, TimeUnit.SECONDS));
+    assertEquals("Pixel_6_API_33", ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getName());
   }
 
   @Test
-  public void newKeyNameIsntNullAndDoesntEqualBuild() throws Exception {
+  public void getNameAsync() throws Exception {
     // Arrange
-    Mockito.when(myDdmlibDevice.isOnline()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.isEmulator()).thenReturn(true);
-    Mockito.when(myDdmlibDevice.getAvdName()).thenReturn("Pixel_4_API_30");
+    Mockito.when(myDevice.getSystemProperty(IDevice.PROP_DEVICE_MODEL)).thenReturn(Futures.immediateFuture("Pixel 4a"));
+    Mockito.when(myDevice.getSystemProperty(IDevice.PROP_DEVICE_MANUFACTURER)).thenReturn(Futures.immediateFuture("Google"));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("02131FQC200017");
 
-    AndroidDevice androidDevice = Mockito.mock(AndroidDevice.class);
-    AsyncSupplier<List<ConnectedDevice>> task = new ConnectedDevicesTask(myAndroidDebugBridge, null, myExecutor, d -> androidDevice);
+    myTask = new ConnectedDevicesTask(myBridge, null);
 
     // Act
-    Future<List<ConnectedDevice>> connectedDevices = task.get();
+    var future = myTask.get();
 
     // Assert
-    Object connectedDevice = new ConnectedDevice.Builder()
-      .setName("Pixel_4_API_30")
-      .setType(Type.PHONE)
-      .setKey(new VirtualDeviceName("Pixel_4_API_30"))
-      .setAndroidDevice(androidDevice)
-      .build();
+    assertEquals("Google Pixel 4a", ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getName());
+  }
 
-    assertEquals(Collections.singletonList(connectedDevice), connectedDevices.get(1, TimeUnit.SECONDS));
+  @Test
+  public void getKeyAsyncDeviceIsntEmulator() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.getSystemProperty(IDevice.PROP_DEVICE_MODEL)).thenReturn(Futures.immediateFuture("Pixel 4a"));
+    Mockito.when(myDevice.getSystemProperty(IDevice.PROP_DEVICE_MANUFACTURER)).thenReturn(Futures.immediateFuture("Google"));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("02131FQC200017");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(new SerialNumber("02131FQC200017"), ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getKey());
+  }
+
+  @Test
+  public void getKeyDeviceIsNull() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(null));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(new SerialNumber("emulator-5554"), ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getKey());
+  }
+
+  @Test
+  public void getKeyPathIsntNull() throws Exception {
+    // Arrange
+    var path = Path.of(System.getProperty("user.home"), ".android", "avd", "Pixel_6_API_33.avd").toString();
+
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData(null, path)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(new VirtualDevicePath(path), ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getKey());
+  }
+
+  @Test
+  public void getKeyNameIsNull() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData(null, null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(new SerialNumber("emulator-5554"), ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getKey());
+  }
+
+  @Test
+  public void getKeyNameEqualsBuild() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData("<build>", null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(new SerialNumber("emulator-5554"), ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getKey());
+  }
+
+  @Test
+  public void getKey() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData("Pixel_6_API_33", null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(new VirtualDeviceName("Pixel_6_API_33"), ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getKey());
+  }
+
+  @Test
+  public void getLaunchCompatibilityAsyncLaunchCompatibilityCheckerIsNull() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData(null, null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    myTask = new ConnectedDevicesTask(myBridge, null);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(LaunchCompatibility.YES, ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getLaunchCompatibility());
+  }
+
+  @Test
+  public void getLaunchCompatibilityAsync() throws Exception {
+    // Arrange
+    Mockito.when(myDevice.isEmulator()).thenReturn(true);
+    Mockito.when(myDevice.getAvdData()).thenReturn(Futures.immediateFuture(new AvdData(null, null)));
+    Mockito.when(myDevice.getSerialNumber()).thenReturn("emulator-5554");
+
+    var device = new ConnectedAndroidDevice(myDevice);
+
+    var checker = Mockito.mock(LaunchCompatibilityChecker.class);
+    Mockito.when(checker.validate(device)).thenReturn(LaunchCompatibility.YES);
+
+    myTask = new ConnectedDevicesTask(myBridge, checker, d -> device);
+
+    // Act
+    var future = myTask.get();
+
+    // Assert
+    assertEquals(LaunchCompatibility.YES, ((List<ConnectedDevice>)future.get(60, TimeUnit.SECONDS)).get(0).getLaunchCompatibility());
   }
 }
